--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gulp Start</title>
-    <link rel="stylesheet" href="css/style.min.css" />
-  </head>
+  @@include('components/_head.html')
   <body>
+    @@loop('components/_news-item.html', '../data/news.json')
+    <h1>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure eius
+      repellat magni enim error et quis cum dignissimos aspernatur facilis
+      maiores dolores, qui ullam ut consequuntur totam nostrum odio a.
+    </h1>
+
     <script src="js/scripts.min.js"></script>
   </body>
 </html>
