FEAT: Webpack build done
Experienced the bundler with almost all needed options to run a
project with that build(html, css, sass, js, ts, react, fonts, images
and so on...). Also have some bonuses, as eslint config with babel

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="bright-sun.ico" type="image/ico" />
+    <title>Webpack</title>
+  </head>
+  <body>
+    <div class="main-wrapper">
+      <h1>Some title</h1>
+      <div class="inner-block">
+        <img src="images/arrow_all.png" alt="Some-img" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+    </div>
+  </body>
+</html>
+
+<!-- <!DOCTYPE html>
+<html lang="en">
   @@include('components/_head.html')
   <body>
     @@loop('components/_news-item.html', '../data/news.json')
@@ -11,4 +31,4 @@
 
     <script src="js/scripts.min.js"></script>
   </body>
-</html>
+</html> -->
